# sail-car-log

./: #INSTALL.mdown#  .gitignore  INSTALL.mdown  LICENSE  README.md
cameralogger/: CMakeLists.txt  CameraHelper.h  CameraLogger.cpp  CameraLogger.h  Consumer.h  Consumer_CV.h  Display_CV.h  GPSLogger.cpp  GPSLogger.h  GPSRecord.cpp  GPSRecord.h  Makefile  README  RecombineVideo.py  SaveImageToAviEx.cpp  SaveImageToAviEx.h  check_packets.py  pyavconv.py
cloudproc/: CMakeLists.txt
cloudproc/include/: cloud_server.h  parameters.h  parameters.hpp  point_defs.h
cloudproc/include/utils/: cloud_utils.h  cloud_utils.hpp  cloud_viz.h  cloud_viz.hpp  color_utils.h  cv_utils.h  hdf_utils.h  hdf_utils.hpp  path_utils.h
cloudproc/pipeline/: fabfile.py  ldr_to_h5.py  matrix_to_euler.py  pipeline.py  pipeline_config.py  sync_data.py  visualize_icp_correction.py  vizualize_icp_correction.py
cloudproc/src/: CMakeLists.txt  align_clouds.cpp  cloud_server.cpp  color_cloud.cpp  downsample_cloud.cpp  h5_to_pcd.cpp  pairwise_register.cpp  parameters.cpp  project_lidar_on_video.cpp  register_clouds.cpp
cloudproc/src/octomap/: CMakeLists.txt  build_color_octomap.cpp  build_octomap.cpp  octomap_color.cpp  octomap_filter.cpp  octree_to_h5.cpp  project_lidar_on_video.cpp
cloudproc/src/utils/: cloud_viz.cpp  cv_utils.cpp  hdf_utils.cpp  path_utils.cpp
cloudproc/src/videoreader/: CMakeLists.txt  VideoReader.cpp  VideoReader.h  test_video_reader.cpp
cloudproc/viz/: blockworld.py
gps_test/: CMakeLists.txt  GPSLogger.cpp  GPSLogger.h  fps_calc.h  gps_test.cpp
lidar/: CMakeLists.txt  FrameFinder.py  README.md  generate_frames.py  generate_frames_and_map.py  generate_gps_out.py  generate_map.py  generate_mbly.py  generate_rdr.py  gps_hdl_grabber.cpp  gps_hdl_grabber.h  hdl_ldr_dump.cpp  hdl_viewer.cpp  mbly_lane.proto  mbly_lane_pb2.py  mbly_obj.proto  mbly_obj_pb2.py  mbly_ref.proto  mbly_ref_pb2.py  network_capture.sh  network_pcap_simulator.py  test_dpkt.py  udp_reader.py
mapping/: CMakeLists.txt  README.mdown
mapping/include/: cloud_server.h  parameters.h  point_defs.h  support_plane.h  support_plane.hpp
mapping/include/utils/: cloud_utils.h  cloud_utils.hpp  cv_utils.h  hdf_utils.hpp  ldr_utils.h  path_utils.h
mapping/mapcreation/: 101ex  map.py  mapclient.py  mapper.py
mapping/openDrive/: .gitignore  mySamp.xodr  output10  reader.py
mapping/openDrive/V1.3.4lite/: README.txt  command  odrTest2
mapping/openDrive/V1.3.4lite/V1.3.4lite/: odrTest
mapping/openDrive/V1.3.4lite/inc/: Coord.hh  LaneCoord.hh  OdrManagerLite.hh  OpenDRIVE.hh
mapping/openDrive/V1.3.4lite/src/: main.cc  mymain.cc
mapping/pipeline/: fabfile.py  ldr_to_h5.py  params_to_h5.py  pipeline.py  pipeline_config.py  pipeline_utils.py  sync_back.py  sync_data.py  viz_corrections.py
mapping/sandbox/: plot_gps.py
mapping/sandbox/gps_viewer/: .gitignore  gps_viewer.py  viewer.css  viewer.js  viewer_template.html
mapping/sandbox/graphslam/: align_maps.py  align_runs.py  assign_segment.py  check_freeway_labels.py  chunk_and_align.py  graphslam_config.py  graphslam_pipeline.py  lidar_integrator.py  match_traces.py  project_map_on_video.py  segment_freeways.json  solve_qp.py  view_merge.py
mapping/sandbox/graphslam/scripts/: align_maps_all.py  eval_maps.py  export_lanes.py  export_maps.py  generate_videos.py
mapping/src/: CMakeLists.txt  align_clouds.cpp  color_intensity.cpp  compute_bounds.cpp  concatenate_points_pcd.cpp  estimate_normals.cpp  h5_to_pcd.cpp  ldr_to_pcd.cpp  pairwise_align.cpp  parameters.cpp  project_map_on_video.cpp  transform_point_cloud.cpp  upsample_cloud.cpp  view_pcd.cpp
mapping/src/lidar_detect/: CMakeLists.txt  detect_cars.cpp  support_plane.cpp
mapping/src/octomap/: CMakeLists.txt  build_color_octomap.cpp  build_octomap.cpp  octomap_color.cpp  octomap_filter.cpp  project_lidar_on_video.cpp
mapping/src/utils/: cloud_utils.cpp  color_utils.cpp  cv_utils.cpp  ldr_utils.cpp
mapping/src/videoreader/: VideoReader.cpp  VideoReader.h
mapping/viz/: blockworld.py  side_by_side.py
ros_drivers/src/lane_detection/: CMakeLists.txt  car_detection_video.sh  carlane_detection_video.sh  multilane_detection_video.sh  package.xml  start_lane_prediction_cam.sh  start_lane_prediction_record.sh  start_lane_prediction_video.sh
ros_drivers/src/lane_detection/include/: LanePredictor.h  LanePredictor_Q50.h  LanePredictor_honda.h  RXTX_CANCom.h  RXTX_ConvData.h
ros_drivers/src/lane_detection/launch/: car_detection_video.launch  carlane_detection_cam.launch  carlane_detection_cam_record.launch  carlane_detection_video.launch  multilane_detection_video.launch  start_lane_detection_cam_leaf.launch  start_lane_detection_cam_leaf_record.launch  start_lane_detection_cam_q50.launch  start_lane_detection_video.launch  start_lane_detection_video_Q50.launch
ros_drivers/src/lane_detection/msg/: Delay.msg  LaneOutput.msg
ros_drivers/src/lane_detection/src/: CarDetectionNode.cpp  CarLaneDetectionNode.cpp  LanePredictionNode.cpp  (+7 more)
ros_drivers/src/novatel_serial_driver/: CMakeLists.txt  README.md  novatel_driver_node.cpp  package.xml  serial_comm.cpp  serial_comm.h
ros_drivers/src/tcpdump_driver/: CMakeLists.txt  package.xml  tcpdump_driver_node.cpp
ros_drivers/src/trimble_gps/: CMakeLists.txt  CMakeLists.txt.orig  CsvDefine.h  Wgs2Htz.cpp  Wgs2Htz.h  gps_converter.cpp  gps_converter_BL.cpp  package.xml  trimble_gps.cpp  trimble_gps.hpp  trimble_gps_publisher.cpp
stereo/: BinaryIO.h  CMakeCache.txt  CMakeLists.txt  Makefile  SString.h  VideoRecorder.h  bumblebee_grab.cpp  bumblebee_stereo.cpp  bumblebee_xb3.h  short.cal  stereo_grab.cpp  stereo_xb3.h  triclops.cal  triclops_xb3.h  video2png.cpp  wide.cal
videoreader/: CMakeLists.txt  VideoReader.cpp
visualization/: CMakeLists.txt  LidarVisualizer.py  MapVisualizer.py  README.md  TestVisualizer.py  aivtk.py  icp.py  icp_step.py  rigid_transform_3D.py
visualization/io/: CMakeLists.txt  Parser.h  test_gps_parser.cpp
visualization/render/: CMakeLists.txt  keyboard_handler.h  osg_demo.cpp  osg_demo.h  viewer.cpp  viewer.h  viewer_keyboard.h
(+431 files in other folders)
